fix: fix tags list spacing in responsive

--- a/src/components/description/styles.scss
+++ b/src/components/description/styles.scss
@@ -159,6 +159,8 @@
         margin: 10px 0;
 
         .tags-list {
+          display: flex;
+          flex-wrap: wrap;
           font-size: 14px;
           font-weight: 600;
 
@@ -167,8 +169,10 @@
             height: 18px;
             border-radius: 7px;
             box-sizing: border-box;
+            margin: 10px 5px 0 0;
             padding: 10px 10px;
             font-size: 10px;
+            box-sizing: border-box;
           }
         }
       }
